# crewai-carousel

./: .gitignore  GEMINI.md  README.md  carousel.md  example.env  pyproject.toml  report.html
src/carousel/: best_practices.py  crew.py  main.py  ui.py
src/carousel/config/: agents.yaml  tasks.yaml
src/carousel/tools/: imagen_tool.py  llm.py  pdf_tool.py  workflow_tool.py
