[project]
name = "carousel"
version = "0.1.0"
description = "carousel using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]",
    "google-genai>=1.36.0",
    "weasyprint"
]

[project.scripts]
carousel = "carousel.main:run"
run_crew = "carousel.main:run"
train = "carousel.main:train"
replay = "carousel.main:replay"
test = "carousel.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"