[project]
name = "carousel"
version = "0.1.0"
description = "carousel using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.49.0,<1.0.0",
    "crewai-tools>=0.4.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "google-generativeai>=0.5.4,<1.0.0",
    "kaleido==0.2.1"
]

[project.scripts]
carousel = "carousel.main:run"
run_crew = "carousel.main:run"
train = "carousel.main:train"
replay = "carousel.main:replay"
test = "carousel.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
