[project]
name = "carousel"
version = "0.1.0"
description = "carousel using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.49.0,<1.0.0",
    "crewai-tools>=0.4.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "google-generativeai>=0.5.4,<1.0.0",
    "google-genai>=1.41.0,<2.0.0",
    "kaleido==0.2.1",
    "typer>=0.12.3,<1.0.0",
    "plotly>=5.24.0,<6.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "PySide6>=6.7.0,<7.0.0"
]

[project.scripts]
carousel = "carousel.main:app"
run_crew = "carousel.main:app"
train = "carousel.main:train"
replay = "carousel.main:replay"
test = "carousel.main:test"
carousel_ui = "carousel.ui:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
